# gdk

./: .gitlab-ci.yml  meson.build  setup.py
gdk-python/: .gitignore
include/: gdk.h
src/: ffi_c.cpp  ga_session.cpp  ga_session.hpp  meson.build  session.cpp  session.hpp  utils.cpp  utils.hpp
src/swig_java/: swig_gasdk.i
src/swig_python/: python_extra.py_in  swig_gasdk.i
tools/: install_python.sh  swig_python.sh
